dnl  Copyright 2005 Red Hat, Inc.
dnl
dnl  Permission to use, copy, modify, distribute, and sell this software
dnl  and its documentation for any purpose is hereby granted without
dnl  fee, provided that the above copyright notice appear in all copies
dnl  and that both that copyright notice and this permission notice
dnl  appear in supporting documentation, and that the name of Red Hat
dnl  not be used in advertising or publicity pertaining to distribution
dnl  of the software without specific, written prior permission.  Red
dnl  Hat makes no representations about the suitability of this software
dnl  for any purpose.  It is provided "as is" without express or implied
dnl  warranty.
dnl
dnl  RED HAT DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE,
dnl  INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS, IN
dnl  NO EVENT SHALL RED HAT BE LIABLE FOR ANY SPECIAL, INDIRECT OR
dnl  CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS
dnl  OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT,
dnl  NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN
dnl  CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
dnl
dnl Process this file with autoconf to create configure.

AC_PREREQ([2.57])
AC_INIT(font-xfree86-type1, [1.0.1], [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg], font-xfree86-type1)
AM_INIT_AUTOMAKE([foreign dist-bzip2])
AM_MAINTAINER_MODE

# Require xorg-macros: XORG_CHANGELOG
m4_ifndef([XORG_MACROS_VERSION], [AC_FATAL([must install xorg-macros 1.2 or later before running autoconf/autogen])])
XORG_MACROS_VERSION(1.2)
AC_PROG_INSTALL

AC_PATH_PROG(MKFONTSCALE, mkfontscale)
if test x"$MKFONTSCALE" = x; then
	AC_MSG_ERROR([mkfontscale is required to build xfree86-type1 fonts.])
fi
AC_PATH_PROG(MKFONTDIR, mkfontdir)
if test x"$MKFONTDIR" = x; then
	AC_MSG_ERROR([mkfontdir is required to build xfree86-type1 fonts.])
fi
AC_PATH_PROG(FCCACHE, fc-cache)

fontdir=${libdir}/X11/fonts/Type1
AC_ARG_WITH(fontdir, AC_HELP_STRING([--with-fontdir=<pathname>],
	[Path to install fonts]), [fontdir="$withval"])
FONTDIR="$fontdir"
AC_SUBST(FONTDIR)

XORG_RELEASE_VERSION
XORG_CHANGELOG

AC_OUTPUT([Makefile])
